testsuite/tests/properties/invalid_lazy_field/inconsistent_base_2.lkt
import common

class FooNode implements Node[FooNode] {
    @export @lazy p: Int = 2
}

class Example: FooNode {
    @export fun p(): Int = 2
}
